--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,7 @@
-browser = Chrome
-url = http://tekwillacademy-opencart.online/
-passwordMin = 3;
-passwordMax = 4;
+browser=Chrome
+url=http://tekwillacademy-opencart.online/
+passwordMin=3
+passwordMax=4
+implicitWait=5
+pageLoadWaitValue=30
+explicitWaitValue=5
