--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
         <cucumber.version>7.16.1</cucumber.version>
         <junit4.version>4.13.2</junit4.version>
+        <log4j2.version>2.20.0</log4j2.version>
     </properties>
 
     <dependencies>
@@ -102,6 +103,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit4.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
         </dependency>
     </dependencies>
 </project>
